; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_SendClusterMessage.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_SendClusterMessage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@server = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@REDISMODULE_ERR = common dso_local global i32 0, align 4
@C_OK = common dso_local global i64 0, align 8
@REDISMODULE_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RM_SendClusterMessage(%struct.TYPE_6__* %0, i8* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @server, i32 0, i32 0), align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %5
  %16 = load i32, i32* @REDISMODULE_ERR, align 4
  store i32 %16, i32* %6, align 4
  br label %36

17:                                               ; preds = %5
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @moduleTypeEncodeId(i32 %22, i32 0)
  store i32 %23, i32* %12, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i8*, i8** %10, align 8
  %28 = load i32, i32* %11, align 4
  %29 = call i64 @clusterSendModuleMessageToTarget(i8* %24, i32 %25, i32 %26, i8* %27, i32 %28)
  %30 = load i64, i64* @C_OK, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %17
  %33 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %33, i32* %6, align 4
  br label %36

34:                                               ; preds = %17
  %35 = load i32, i32* @REDISMODULE_ERR, align 4
  store i32 %35, i32* %6, align 4
  br label %36

36:                                               ; preds = %34, %32, %15
  %37 = load i32, i32* %6, align 4
  ret i32 %37
}

declare dso_local i32 @moduleTypeEncodeId(i32, i32) #1

declare dso_local i64 @clusterSendModuleMessageToTarget(i8*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
